<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Header Section -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:background="@drawable/headerbg"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/left_arrow"
                    android:layout_marginEnd="8dp"
                    app:tint="@android:color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Points"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Start collecting points today and redeem them for exclusive coupons to enjoy big deals!"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:layout_marginTop="4dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginTop="8dp">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/user" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Player Name"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginTop="4dp" />
            </LinearLayout>
        </LinearLayout>

         <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_bottom_background"
            android:elevation="8dp"
            android:orientation="vertical"
            android:layout_marginTop="-20dp"
            android:padding="16dp">
            <!-- Points Section -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/rounded_background"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="16dp">

                <!-- Points Section -->

                <!-- Level Section -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="40dp"
                        android:src="@drawable/points" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="POINTS\n350"
                        android:textAlignment="center"
                        android:textColor="@android:color/white"
                        android:textSize="11sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/level" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="LEVEL\n20"
                        android:textAlignment="center"
                        android:textColor="@android:color/white"
                        android:textSize="11sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <!-- Rank Section -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/rank" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="RANK\nEco Leader"
                        android:textAlignment="center"
                        android:textColor="@android:color/white"
                        android:textSize="11sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

            <!-- Coupons Section -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="COUPONS"
                android:textSize="18sp"
                android:textColor="#000000"
                android:textStyle="bold" />

            <!-- Coupon Card -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:background="@drawable/coupon_card_bg"
                android:elevation="4dp"
                android:orientation="horizontal"
                android:padding="12dp">

                <!-- Coupon Logo -->
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/circles_shape"
                    android:scaleType="centerCrop"
                    android:src="@drawable/masg" />

                <!-- Coupon Details -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="62dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:paddingStart="12dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Masugid Enterprise"
                        android:textColor="@android:color/black"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="1000 points to redeem 5% discount"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="10sp" />

                    <!-- Progress Bar -->
                    <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="100dp"
                        android:layout_height="20dp"
                        android:progress="60"
                        android:progressDrawable="@drawable/progress_bar_style" />

                </LinearLayout>

                <!-- Redeem Button -->
                <Button
                    android:id="@+id/redeemButton1"
                    android:layout_width="100.7dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:backgroundTint="@color/green"
                    android:text="@string/redeemss"
                    android:textSize="14dp"
                    android:textColor="@android:color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:background="@drawable/coupon_card_bg"
                android:elevation="4dp"
                android:orientation="horizontal"
                android:padding="12dp">

                <!-- Coupon Logo -->
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/circles_shape"
                    android:scaleType="centerCrop"
                    android:src="@drawable/masg" />

                <!-- Coupon Details -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:paddingStart="12dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Masugid Enterprise"
                        android:textColor="@android:color/black"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="1000 points to redeem 5% discount"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="10sp" />

                    <!-- Progress Bar -->
                    <ProgressBar
                        android:id="@+id/progressBar2"
                        android:layout_width="100dp"
                        android:layout_height="20dp"
                        android:progress="60"
                        android:progressDrawable="@drawable/progress_bar_style" />

                </LinearLayout>

                <!-- Redeem Button -->
                <Button
                    android:id="@+id/redeemButton2"
                    android:layout_width="100.7dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:backgroundTint="@color/green"
                    android:text="@string/redeemsssss"
                    android:textSize="14dp"
                    android:textColor="@android:color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:background="@drawable/coupon_card_bg"
                android:elevation="4dp"
                android:orientation="horizontal"
                android:padding="12dp">

                <!-- Coupon Logo -->
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/circles_shape"
                    android:scaleType="centerCrop"
                    android:src="@drawable/wanni" />

                <!-- Coupon Details -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:paddingStart="12dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Wani Enterprise"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="1000 points to redeem 5% discount"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="10sp" />

                    <!-- Progress Bar -->
                    <ProgressBar
                        android:id="@+id/progressBar3"
                        android:layout_width="100dp"
                        android:layout_height="20dp"
                        android:progress="60"
                        android:progressDrawable="@drawable/progress_bar_style" />

                </LinearLayout>

                <!-- Redeem Button -->
                <Button
                    android:id="@+id/redeemButton3"
                    android:layout_width="100.7dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:backgroundTint="@color/green"
                    android:text="@string/redeemsss"
                    android:textSize="14dp"
                    android:textColor="@android:color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:background="@drawable/coupon_card_bg"
                android:elevation="4dp"
                android:orientation="horizontal"
                android:padding="12dp">

                <!-- Coupon Logo -->
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/circles_shape"
                    android:scaleType="centerCrop"
                    android:src="@drawable/playmakeer" />

                <!-- Coupon Details -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:paddingStart="12dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Playmaker Enterprise"
                        android:textColor="@android:color/black"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="1000 points to redeem 5% discount"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="10sp" />

                    <!-- Progress Bar -->
                    <ProgressBar
                        android:id="@+id/progressBar4"
                        android:layout_width="100dp"
                        android:layout_height="20dp"
                        android:progress="60"
                        android:progressDrawable="@drawable/progress_bar_style" />

                </LinearLayout>

                <!-- Redeem Button -->
                <Button
                    android:id="@+id/redeemButton4"
                    android:layout_width="100.7dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:backgroundTint="@color/green"
                    android:text="@string/s"
                    android:textSize="14dp"
                    android:textColor="@android:color/white" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
